Add audit github workflow

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Wiztagram allows you to create and share your magic photos">
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Wiztagram</title>
 </head>
